# ai-multi-modal-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
client/: next.config.js  package-lock.json  package.json  tailwind.config.ts
client/app/: globals.css  layout.tsx  page.tsx
client/components/: InsightsPanel.tsx  LessonCard.tsx  Orb.tsx  Transcript.tsx
client/lib/: audio.ts  session.ts
docs/: architecture.md  architecture.mmd  demo_script.md  writeup.md
evals/: golden_set.json  test_curriculum.py  test_doubt_detection.py  test_fsm.py  test_grader.py  test_sm2.py
server/: config.py  main.py  pipeline.py
server/agent/: core.py  doubt.py  fsm.py  grader.py  intent.py  personas.py  pronunciation.py  quiz.py
server/curriculum/: loader.py
server/curriculum/spanish/: lessons.json  system_prompt.md  voice_config.json
server/db/: repo.py  schema.sql
server/observability/: metrics.py  tracer.py
server/services/: llm.py  stt.py  tts.py  vad.py
server/tools/: definitions.py
