[project]
name = "voice-tutor"
version = "0.1.0"
description = "Voice-first multilingual language tutor"
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=6.1.12",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "structlog>=24.4.0",
    "pydantic>=2.9.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.10.0",
    "pipecat-ai[openai,deepgram,cartesia,silero,webrtc]>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.setuptools.packages.find]
include = ["server*"]
exclude = ["client*", "evals*", "docs*", "traces*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["evals"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
